# Editora

./: .gitignore  CMakeLists.txt  README.md  zxcdas
Debug/: mocs_compilation.cpp
Debug/3YJK5W5UP7/: qrc_resources.cpp
Debug/7VGUASVTHG/: moc_customfilesystemmodel.cpp  moc_customfilesystemmodel.cpp.d  moc_customheaders.cpp  moc_customheaders.cpp.d  moc_customproxy.cpp  moc_customproxy.cpp.d  moc_customwidget.cpp  moc_customwidget.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
Debug/7VUAZTOQ5C/: moc_codeeditor.cpp  moc_codeeditor.cpp.d  moc_syntaxhighlighter.cpp  moc_syntaxhighlighter.cpp.d
Debug/F4FAE6NH3Q/: qrc_resources.cpp
Debug/FINY5OIUMY/: moc_filesSystemInterface.cpp  moc_filesSystemInterface.cpp.d  moc_fileshandler.cpp  moc_fileshandler.cpp.d  moc_filesimpl.cpp  moc_filesimpl.cpp.d  moc_filesmanager.cpp  moc_filesmanager.cpp.d  moc_filesysteminterface.cpp  moc_filesysteminterface.cpp.d  moc_foldersmanager.cpp  moc_foldersmanager.cpp.d
Debug/include/: ui_mainwindow.h
resources/: resources.qrc
src/: fileshandler.cpp  fileshandler.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
src/code_editor/: LineNumberArea.h  codeeditor.cpp  codeeditor.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/files_manager/: FileSystemInterface.cpp  FileSystemInterface.h  filesSystemInterface.cpp  filesSystemInterface.h  fileshandler.cpp  filesmanager.cpp  filesmanager.h
src/notebad/: customfilesystemmodel.cpp  customfilesystemmodel.h  customproxy.cpp  customproxy.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  shortkeysmanager.cpp  shortkeysmanager.h
src/resources/: resources.qrc
